--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -533,11 +533,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Route data of COVID-19 patients in South Korea"
+   ]
   },
   {
    "cell_type": "code",
@@ -1246,18 +1246,359 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Epidemiological data of COVID-19 patients in South Korea"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>global_num</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>infection_case</th>\n",
+       "      <th>infection_order</th>\n",
+       "      <th>infected_by</th>\n",
+       "      <th>contact_number</th>\n",
+       "      <th>symptom_onset_date</th>\n",
+       "      <th>confirmed_date</th>\n",
+       "      <th>released_date</th>\n",
+       "      <th>deceased_date</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000000001</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangseo-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000000002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jungnang-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000003</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jongno-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>contact with patient</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.002000e+09</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000000004</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Mapo-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-02-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000000005</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Seongbuk-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>contact with patient</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2213</th>\n",
+       "      <td>6100000085</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1990.0</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>Changwon-si</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2214</th>\n",
+       "      <td>7000000001</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-02-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>isolated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2215</th>\n",
+       "      <td>7000000002</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-02-22</td>\n",
+       "      <td>2020-03-07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2216</th>\n",
+       "      <td>7000000003</td>\n",
+       "      <td>4345.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1972.0</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2217</th>\n",
+       "      <td>7000000004</td>\n",
+       "      <td>5534.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>isolated</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2218 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      patient_id  global_num     sex  birth_year  age country  \\\n",
+       "0     1000000001         2.0    male      1964.0  50s   Korea   \n",
+       "1     1000000002         5.0    male      1987.0  30s   Korea   \n",
+       "2     1000000003         6.0    male      1964.0  50s   Korea   \n",
+       "3     1000000004         7.0    male      1991.0  20s   Korea   \n",
+       "4     1000000005         9.0  female      1992.0  20s   Korea   \n",
+       "...          ...         ...     ...         ...  ...     ...   \n",
+       "2213  6100000085         NaN    male      1990.0  30s   Korea   \n",
+       "2214  7000000001       139.0    male      1998.0  20s   Korea   \n",
+       "2215  7000000002       222.0  female      1998.0  20s   Korea   \n",
+       "2216  7000000003      4345.0  female      1972.0  40s   Korea   \n",
+       "2217  7000000004      5534.0    male      1974.0  40s   Korea   \n",
+       "\n",
+       "              province         city disease        infection_case  \\\n",
+       "0                Seoul   Gangseo-gu     NaN       overseas inflow   \n",
+       "1                Seoul  Jungnang-gu     NaN       overseas inflow   \n",
+       "2                Seoul    Jongno-gu     NaN  contact with patient   \n",
+       "3                Seoul      Mapo-gu     NaN       overseas inflow   \n",
+       "4                Seoul  Seongbuk-gu     NaN  contact with patient   \n",
+       "...                ...          ...     ...                   ...   \n",
+       "2213  Gyeongsangnam-do  Changwon-si     NaN                   NaN   \n",
+       "2214           Jeju-do      Jeju-do     NaN                   etc   \n",
+       "2215           Jeju-do      Jeju-do     NaN                   etc   \n",
+       "2216           Jeju-do          etc     NaN                   etc   \n",
+       "2217           Jeju-do      Jeju-do     NaN                   etc   \n",
+       "\n",
+       "      infection_order   infected_by  contact_number symptom_onset_date  \\\n",
+       "0                 1.0           NaN            75.0         2020-01-22   \n",
+       "1                 1.0           NaN            31.0                NaN   \n",
+       "2                 2.0  2.002000e+09            17.0                NaN   \n",
+       "3                 1.0           NaN             9.0         2020-01-26   \n",
+       "4                 2.0  1.000000e+09             2.0                NaN   \n",
+       "...               ...           ...             ...                ...   \n",
+       "2213              NaN           NaN             NaN                NaN   \n",
+       "2214              NaN           NaN            87.0                NaN   \n",
+       "2215              NaN           NaN            84.0                NaN   \n",
+       "2216              NaN           NaN            21.0                NaN   \n",
+       "2217              NaN           NaN            74.0                NaN   \n",
+       "\n",
+       "     confirmed_date released_date deceased_date     state  \n",
+       "0        2020-01-23    2020-02-05           NaN  released  \n",
+       "1        2020-01-30    2020-03-02           NaN  released  \n",
+       "2        2020-01-30    2020-02-19           NaN  released  \n",
+       "3        2020-01-30    2020-02-15           NaN  released  \n",
+       "4        2020-01-31    2020-02-24           NaN  released  \n",
+       "...             ...           ...           ...       ...  \n",
+       "2213     2020-03-16           NaN           NaN       NaN  \n",
+       "2214     2020-02-20           NaN           NaN  isolated  \n",
+       "2215     2020-02-22    2020-03-07           NaN  released  \n",
+       "2216     2020-03-02    2020-03-15           NaN  released  \n",
+       "2217     2020-03-04           NaN           NaN  isolated  \n",
+       "\n",
+       "[2218 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dataSet-Covid/PatientInfo.csv')"
+   ]
   },
   {
    "cell_type": "code",
