--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,13 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>PANDEMIC COVID-19 - South Korea</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## <center>PANDEMIC COVID-19 - South Korea</center><br>\n",
     "## The dataset to be used for the final course job is described in this section. \n",
     "## Data source : KCDC (Korea Centers for Disease Control and Prevention)."
    ]
@@ -41,11 +35,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Location and statistical data of the regions in South Korea"
+   ]
   },
   {
    "cell_type": "code",
