--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center>PANDEMIC COVID-19 - South Korea</center><br>\n",
+    "## PANDEMIC COVID-19 - South Korea\n",
     "## The dataset to be used for the final course job is described in this section. \n",
     "## Data source : KCDC (Korea Centers for Disease Control and Prevention)."
    ]
@@ -724,11 +724,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data of floating population in Seoul, South Korea (from SK Telecom Big Data Hub)"
+   ]
   },
   {
    "cell_type": "code",
