--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -38,6 +38,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Description general DataSet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1) Region : Location and statistical data of the regions in South Korea :\n",
+    "<ul>\n",
+    "    <li>code(int)</li> \n",
+    "    <li>province(string></li>\n",
+    "    <li>-city(string></li>\n",
+    "    <li>latitude(float></li>\n",
+    "    <li>longitude</li>\n",
+    "    <li>elementary_school_count(int)</li>\n",
+    "    <li>kindergarten_court(int)</li>\n",
+    "    <li>university_count(int)</li>\n",
+    "    <li>academy_ratio(float)</li>\n",
+    "    <li>elderly_population_ratio(float)</li>\n",
+    "    <li>elderly_alone_ratio(float)</li>\n",
+    "    <li>nursing_home_count(int></li>\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1) Location and statistical data of the regions in South Korea"
    ]
   },
