--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +47,19 @@
    "source": [
     "## 1) Region : Location and statistical data of the regions in South Korea :\n",
     "<ul>\n",
-    "    <li>code(int)</li> \n",
-    "    <li>province(string></li>\n",
-    "    <li>-city(string></li>\n",
-    "    <li>latitude(float></li>\n",
-    "    <li>longitude</li>\n",
+    "    <li>code(int): Code of the region </li> \n",
+    "    <li><b>province(string): City Metropolitan or Province(do)</b></li>\n",
+    "    <li><b>city(string): District(gu)/City(si)/Country(gun)</b></li>\n",
+    "    <li><b>latitude(float></b></li>\n",
+    "    <li><b>longitude</b></li>\n",
     "    <li>elementary_school_count(int)</li>\n",
     "    <li>kindergarten_court(int)</li>\n",
     "    <li>university_count(int)</li>\n",
     "    <li>academy_ratio(float)</li>\n",
-    "    <li>elderly_population_ratio(float)</li>\n",
-    "    <li>elderly_alone_ratio(float)</li>\n",
-    "    <li>nursing_home_count(int></li>\n",
-    "    \n"
+    "    <li><b>elderly_population_ratio(float)<b></li>\n",
+    "    <li><b>elderly_alone_ratio(float)<b></li>\n",
+    "    <li><b>nursing_home_count(int></b></li>\n",
+    "</ul>    \n"
    ]
   },
   {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "[244 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,12 +1313,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8)Epidemiological data of COVID-19 patients in South Korea"
+    "# 8)Epidemiological data of COVID-19 patients in South Korea\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Description table dataset\n",
+    "<ul>\n",
+    "    <li>patient_id(int): id of the patient </li> \n",
+    "    <li><b>global_num(int): number KCDC</b></li>\n",
+    "    <li><b>sex (string): sex of patient</b></li>\n",
+    "    <li><b>birth_year(int): the birth year of patient</b></li>\n",
+    "    <li><b>age(int): the age of patient</b></li>\n",
+    "    <li>country (string): the country patient</li>\n",
+    "    <li>province(string):the province of patient </li>\n",
+    "    <li>city(string): the city of patient</li>\n",
+    "    <li>infection_case(string): the case of infection</li>\n",
+    "    <li><b>infection_order(float):the order infection<b></li>\n",
+    "    <li><b>infected_by(float):the ID of who infected the patient<b></li>\n",
+    "    <li><b>contact_number(int):the number of contacts with people</b></li>\n",
+    "    <li><b>symptom_onset_date(int):the dat of symptom oncet</b></li>\n",
+    "    <li><b>confirmed_date(int):the date of being confirmed</b></li>\n",
+    "    <li><b>released_date(int):the date of being released</b></li>\n",
+    "    <li><b>state (string):isolated/released/deceased</b></li>\n",
+    "</ul>    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1680,7 @@
        "[2218 rows x 18 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,6 +1688,20 @@
    "source": [
     "pd.read_csv('dataSet-Covid/PatientInfo.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1673,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1940,7 @@
        "[23375 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
