--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -38,50 +38,400 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Description general DataSet"
+    "### Description general DataSet"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) Region : Location and statistical data of the regions in South Korea :\n",
-    "<ul>\n",
-    "    <li>code(int): Code of the region </li> \n",
-    "    <li><b>province(string): City Metropolitan or Province(do)</b></li>\n",
-    "    <li><b>city(string): District(gu)/City(si)/Country(gun)</b></li>\n",
-    "    <li><b>latitude(float></b></li>\n",
-    "    <li><b>longitude</b></li>\n",
-    "    <li>elementary_school_count(int)</li>\n",
-    "    <li>kindergarten_court(int)</li>\n",
-    "    <li>university_count(int)</li>\n",
-    "    <li>academy_ratio(float)</li>\n",
-    "    <li><b>elderly_population_ratio(float)<b></li>\n",
-    "    <li><b>elderly_alone_ratio(float)<b></li>\n",
-    "    <li><b>nursing_home_count(int></b></li>\n",
-    "</ul>    \n"
+    "### Analysis dataset : Region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_region=pd.read_csv('dataSet-Covid/Region.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(244, 12)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dataset size(rows, columns)\n",
+    "df_region.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 244 entries, 0 to 243\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   code                      244 non-null    int64  \n",
+      " 1   province                  244 non-null    object \n",
+      " 2   city                      244 non-null    object \n",
+      " 3   latitude                  244 non-null    float64\n",
+      " 4   longitude                 244 non-null    float64\n",
+      " 5   elementary_school_count   244 non-null    int64  \n",
+      " 6   kindergarten_count        244 non-null    int64  \n",
+      " 7   university_count          244 non-null    int64  \n",
+      " 8   academy_ratio             244 non-null    float64\n",
+      " 9   elderly_population_ratio  244 non-null    float64\n",
+      " 10  elderly_alone_ratio       244 non-null    float64\n",
+      " 11  nursing_home_count        244 non-null    int64  \n",
+      "dtypes: float64(5), int64(5), object(2)\n",
+      "memory usage: 23.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_region.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elementary_school_count</th>\n",
+       "      <th>kindergarten_count</th>\n",
+       "      <th>university_count</th>\n",
+       "      <th>academy_ratio</th>\n",
+       "      <th>elderly_population_ratio</th>\n",
+       "      <th>elderly_alone_ratio</th>\n",
+       "      <th>nursing_home_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>37.566953</td>\n",
+       "      <td>126.977977</td>\n",
+       "      <td>607</td>\n",
+       "      <td>830</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>15.38</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>22739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10010</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangnam-gu</td>\n",
+       "      <td>37.518421</td>\n",
+       "      <td>127.047222</td>\n",
+       "      <td>33</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>3088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10020</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangdong-gu</td>\n",
+       "      <td>37.530492</td>\n",
+       "      <td>127.123837</td>\n",
+       "      <td>27</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>1023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10030</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangbuk-gu</td>\n",
+       "      <td>37.639938</td>\n",
+       "      <td>127.025508</td>\n",
+       "      <td>14</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>19.49</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10040</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangseo-gu</td>\n",
+       "      <td>37.551166</td>\n",
+       "      <td>126.849506</td>\n",
+       "      <td>36</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>14.39</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>1080</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    code province         city   latitude   longitude  \\\n",
+       "0  10000    Seoul        Seoul  37.566953  126.977977   \n",
+       "1  10010    Seoul   Gangnam-gu  37.518421  127.047222   \n",
+       "2  10020    Seoul  Gangdong-gu  37.530492  127.123837   \n",
+       "3  10030    Seoul   Gangbuk-gu  37.639938  127.025508   \n",
+       "4  10040    Seoul   Gangseo-gu  37.551166  126.849506   \n",
+       "\n",
+       "   elementary_school_count  kindergarten_count  university_count  \\\n",
+       "0                      607                 830                48   \n",
+       "1                       33                  38                 0   \n",
+       "2                       27                  32                 0   \n",
+       "3                       14                  21                 0   \n",
+       "4                       36                  56                 1   \n",
+       "\n",
+       "   academy_ratio  elderly_population_ratio  elderly_alone_ratio  \\\n",
+       "0           1.44                     15.38                  5.8   \n",
+       "1           4.18                     13.17                  4.3   \n",
+       "2           1.54                     14.55                  5.4   \n",
+       "3           0.67                     19.49                  8.5   \n",
+       "4           1.17                     14.39                  5.7   \n",
+       "\n",
+       "   nursing_home_count  \n",
+       "0               22739  \n",
+       "1                3088  \n",
+       "2                1023  \n",
+       "3                 628  \n",
+       "4                1080  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show top row\n",
+    "df_region.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elementary_school_count</th>\n",
+       "      <th>kindergarten_count</th>\n",
+       "      <th>university_count</th>\n",
+       "      <th>academy_ratio</th>\n",
+       "      <th>elderly_population_ratio</th>\n",
+       "      <th>elderly_alone_ratio</th>\n",
+       "      <th>nursing_home_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>61160</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>Haman-gun</td>\n",
+       "      <td>35.272481</td>\n",
+       "      <td>128.406540</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>23.74</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>61170</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>Hamyang-gun</td>\n",
+       "      <td>35.520541</td>\n",
+       "      <td>127.725177</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>32.65</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>61180</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>Hapcheon-gun</td>\n",
+       "      <td>35.566702</td>\n",
+       "      <td>128.165870</td>\n",
+       "      <td>17</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>38.44</td>\n",
+       "      <td>24.7</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>70000</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>33.488936</td>\n",
+       "      <td>126.500423</td>\n",
+       "      <td>113</td>\n",
+       "      <td>123</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>15.10</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>1245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>80000</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>37.566953</td>\n",
+       "      <td>126.977977</td>\n",
+       "      <td>6087</td>\n",
+       "      <td>8837</td>\n",
+       "      <td>340</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>15.67</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>94865</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      code          province          city   latitude   longitude  \\\n",
+       "239  61160  Gyeongsangnam-do     Haman-gun  35.272481  128.406540   \n",
+       "240  61170  Gyeongsangnam-do   Hamyang-gun  35.520541  127.725177   \n",
+       "241  61180  Gyeongsangnam-do  Hapcheon-gun  35.566702  128.165870   \n",
+       "242  70000           Jeju-do       Jeju-do  33.488936  126.500423   \n",
+       "243  80000             Korea         Korea  37.566953  126.977977   \n",
+       "\n",
+       "     elementary_school_count  kindergarten_count  university_count  \\\n",
+       "239                       16                  20                 0   \n",
+       "240                       13                  12                 0   \n",
+       "241                       17                  15                 0   \n",
+       "242                      113                 123                 4   \n",
+       "243                     6087                8837               340   \n",
+       "\n",
+       "     academy_ratio  elderly_population_ratio  elderly_alone_ratio  \\\n",
+       "239           1.19                     23.74                 14.7   \n",
+       "240           1.01                     32.65                 20.9   \n",
+       "241           0.71                     38.44                 24.7   \n",
+       "242           1.53                     15.10                  6.4   \n",
+       "243           1.56                     15.67                  7.2   \n",
+       "\n",
+       "     nursing_home_count  \n",
+       "239                  94  \n",
+       "240                  83  \n",
+       "241                  96  \n",
+       "242                1245  \n",
+       "243               94865  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#show bootom rows\n",
+    "df_region.tail()"
+   ]
   },
   {
    "cell_type": "code",
@@ -386,6 +736,13 @@
    "source": [
     "pd.read_csv('dataSet-Covid/Region.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
